fix: checking fix for increasing right div height

--- a/app/views/app_proxy/index.html.slim
+++ b/app/views/app_proxy/index.html.slim
@@ -70,7 +70,7 @@
 
           - ProductSetting.last.filter_array.each do |filter|
             = render partial: filter, locals: {desktop: false}
-    div style="float: left;width: 35%; height: 100vh;"
+    div style="float: left;width: 35%;height: 170%;"
 
   #myLeftSidenav.sidenav.hidden-on-large-screen style="background: black"
     div style='padding: 0 20px'
