fix: added final updates from the client

--- a/app/assets/stylesheets/filter.sass
+++ b/app/assets/stylesheets/filter.sass
@@ -154,6 +154,19 @@
   position: fixed
   display: none
 
+.search-result-empty
+  width: 100%
+  text-align: center
+  height: 100vh
+  position: relative
+
+.search-result-empty-text
+  font-size: 22px
+  color: black
+  font-weight: bold
+  position: relative
+  top: 25%
+
 #shopify-section-cust-footer
 .penbtn-container
 .main-container
