--- a/app/assets/stylesheets/side_bar_nav.sass
+++ b/app/assets/stylesheets/side_bar_nav.sass
@@ -19,6 +19,15 @@ body
     transition: 0.3s
     &:hover
       color: #f1f1f1
+  span
+    padding: 5px 0 6px 0
+    text-decoration: none
+    font-size: 16px
+    color: #818181
+    display: block
+    transition: 0.3s
+    &:hover
+      color: #f1f1f1
   .closebtn .close-sort-btn
     position: absolute
     top: 0
@@ -198,3 +207,7 @@ body
   .cart
     img
       margin-top: -6px !important
+  .complete-header-container
+    transition: 0.5s !important
+  .search-result-empty-text
+    font-size: 18px
