--- a/app/views/home/_products.html.slim
+++ b/app/views/home/_products.html.slim
@@ -3,6 +3,6 @@
     - @products.each do |product|
       .columns.medium-4.small-6.large-3 style="margin-bottom: 46px" class="js-product-group js-product-id-#{product.id}"
         = render partial: 'home/product_fields', locals: {product: product}
-  - else
+  - elsif params[:page].nil?
     .search-result-empty
       p.search-result-empty-text NO RESULTS FOUND
