feat added final updates from client list

--- a/app/assets/stylesheets/products.sass
+++ b/app/assets/stylesheets/products.sass
@@ -13,10 +13,13 @@
   position: relative
 
 .price-field
-  color: #fe89b5
+  color: #7a7a7a
   font-weight: bold
   font-size: 14px
   margin-right: 1rem
+
+.new-sale
+  color: #dc1f26 !important
 
 .shopify-info-block
   p
