--- a/app/views/home/_product_fields.html.slim
+++ b/app/views/home/_product_fields.html.slim
@@ -45,6 +45,6 @@
         .title-container
           .title-field = product.title
         .price-container
-          .price-field = "£ #{product.display_price} GBP"
+          div class="price-field #{product.compare_at_price != 0.0 ? 'new-sale' : ''}" = "£ #{product.display_price} GBP"
           - if product.compare_at_price != 0.0
             .compare-at-price = "£ #{product.compare_at_display_price}"
