--- a/app/assets/stylesheets/side_bar_nav.sass
+++ b/app/assets/stylesheets/side_bar_nav.sass
@@ -108,6 +108,13 @@ body
       font-size: 18px
 
 
+@media screen and (max-width: 1100px)
+  .box-1
+    width: 20%
+  .box-2
+    width: 80%
+  .js-clear-filter
+    width: 20% !important
 
 // tablet
 @media screen and (min-width: 800px) and (max-width: 1024px)
