--- a/app/views/app_proxy/_size.html.slim
+++ b/app/views/app_proxy/_size.html.slim
@@ -6,7 +6,7 @@
     .filter-size-collection.js-size-container.scroll-filter
       - @size_array.each do |size|
         - multisize = [size] << params[:size]
-        = link_to proxy_prod_path(size: multisize.compact.flatten.uniq, brand: params[:brand], product_type: params[:product_type], price: params[:price], q: params[:q], collection: params[:collection]) do
+        = link_to proxy_prod_path(size: multisize.compact.flatten.uniq, brand: params[:brand], product_type: params[:product_type], price: params[:price], q: params[:q], collection: handle_for_collection) do
           - if params[:size] && params[:size].include?(size)
             .black-box-container
               .black-box-parent style='position: relative'
@@ -25,7 +25,7 @@
     .filter-size-collection.js-size-container.scroll-filter
       - @size_array.each do |size|
           - multisize = [size] << params[:size]
-          = link_to proxy_prod_path(size: multisize.compact.flatten.uniq, brand: params[:brand], product_type: params[:product_type], price: params[:price], q: params[:q], collection: params[:collection]) do
+          = link_to proxy_prod_path(size: multisize.compact.flatten.uniq, brand: params[:brand], product_type: params[:product_type], price: params[:price], q: params[:q], collection: handle_for_collection) do
             - if params[:size] && params[:size].include?(size)
               .black-box-container
                 .black-box-parent style='position: relative'
