--- a/app/views/app_proxy/_colour.html.slim
+++ b/app/views/app_proxy/_colour.html.slim
@@ -6,7 +6,7 @@
     .filter-colour-collection.js-colour-container.scroll-filter
       - @colours.each do |va|
         - colour = [va] << params[:colour]
-        = link_to proxy_prod_path(colour: colour.compact.flatten.uniq, size: params[:size], product_type: params[:product_type], price: params[:price], q: params[:q], brand: params[:brand], collection: params[:collection]) do
+        = link_to proxy_prod_path(colour: colour.compact.flatten.uniq, size: params[:size], product_type: params[:product_type], price: params[:price], q: params[:q], brand: params[:brand], collection: handle_for_collection) do
           - if params[:colour] && params[:colour].include?(va)
             .black-box-container
               .black-box-parent style='position: relative'
@@ -26,7 +26,7 @@
     .filter-colour-collection.js-colour-container
       - @colours.each do |va|
           - colour = [va] << params[:colour]
-          = link_to proxy_prod_path(colour: colour.compact.flatten.uniq, size: params[:size], product_type: params[:product_type], price: params[:price], q: params[:q], brand: params[:brand], collection: params[:collection]) do
+          = link_to proxy_prod_path(colour: colour.compact.flatten.uniq, size: params[:size], product_type: params[:product_type], price: params[:price], q: params[:q], brand: params[:brand], collection: handle_for_collection) do
           - if params[:colour] && params[:colour].include?(va)
             .black-box-container
               .black-box-parent style='position: relative'
