--- a/app/views/app_proxy/_type.html.slim
+++ b/app/views/app_proxy/_type.html.slim
@@ -6,7 +6,7 @@
     .filter-type-collection.js-type-container.scroll-filter
       - @product_type.each do |pt|
         - prodtype = [pt] << params[:product_type]
-        = link_to proxy_prod_path(size: params[:size], brand: params[:brand], product_type: prodtype.compact.flatten.uniq, price: params[:price], q: params[:q], collection: params[:collection]) do
+        = link_to proxy_prod_path(size: params[:size], brand: params[:brand], product_type: prodtype.compact.flatten.uniq, price: params[:price], q: params[:q], collection: handle_for_collection) do
           - if params[:product_type] && params[:product_type].include?(pt)
             .black-box-container
               .black-box-parent style='position: relative'
@@ -26,7 +26,7 @@
     .filter-type-collection.js-type-container.scroll-filter
       - @product_type.each do |pt|
           - prodtype = [pt] << params[:product_type]
-          = link_to proxy_prod_path(size: params[:size], brand: params[:brand], product_type: prodtype.compact.flatten.uniq, price: params[:price], q: params[:q], collection: params[:collection]) do
+          = link_to proxy_prod_path(size: params[:size], brand: params[:brand], product_type: prodtype.compact.flatten.uniq, price: params[:price], q: params[:q], collection: handle_for_collection) do
             - if params[:product_type] && params[:product_type].include?(pt)
               .black-box-container
                 .black-box-parent style='position: relative'
