--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -9,146 +9,10 @@
       .admin-section-header True search admin
     .row
       .admin-section-side-bar-container.columns.medium-2 style="padding: 0"
-        .js-true-scroll-option style='border-left: 10px solid rgb(92, 106, 196); background-color: white; color: rgb(92, 106, 196);'
-          = image_tag('vertical-scroll.svg', size: '20', style: 'margin: 0.5rem')
-          .admin-section-side-bar-text True scroll
-        .js-true-filter-option
-          = image_tag('funnel.svg', size: '20', style: 'margin: 0.5rem')
-          .admin-section-side-bar-text True filter
-        .js-true-search-option
+        .js-true-search-option style='border-left: 5px solid rgb(92, 106, 196); background-color: white; color: rgb(92, 106, 196);'
           = image_tag('search.svg', size: '20', style: 'margin: 0.5rem')
           .admin-section-side-bar-text True search
-      .js-admin-section-scroll-config-container.columns.medium-10
-        .header-box
-          span True scroll
-          span The following configurations relate to the True scroll app
-          = link_to 'Sync Products', sync_products_path, class: 'button', style: 'margin: 0; border-radius: 5px; background-color: #3f4eae'
-
-        hr
-
-        .admin-gif-upload-container
-          .admin-gif-upload-info Changing this image will set the gif that appears when new products are being loaded into the page.
-          .position-left
-            div style="padding: 1rem"
-              .file-upload-container
-                = f.input :image, label: false, required: false, as: :file, id: "image-upload"
-
-              img class="spinner-upload hidden" id="img_prev" style="background-image: url('#{ProductSetting.last.image.url}')"
-              .admin-submit-button-container
-                .admin-submit-button-hint Click on the image to change it.
-                / = f.submit 'Submit', class: 'button', style: 'width: 40%; height: 100%; text-align: center; background-color: #3f4eae'
-        hr
-        .scroll-data-inputs
-          .number-of-items-to-load-container
-            = f.input :number_of_items_to_load, as: :select,label: false ,collection: [16, 24, 32], selected: ProductSetting.last.number_of_items_to_load, :input_html => { :style => 'border-radius: 5px; width: 220px; margin: 0 1rem 0 0; color: #212b36' }
-            .number-of-items-to-load-text Pick the number of items that will be loaded in.
-
-
-          .toggle-switch style="margin-top: 1rem"
-            label.switch
-              - if ProductSetting.last.autoscroll_on
-                input class="boolean optional" type="checkbox" checked="checked" onclick="$('#product_setting_autoscroll_on').val() == '1' ? $('#product_setting_autoscroll_on').val('0') : $('#product_setting_autoscroll_on').val('1')"
-              - else
-                input class="boolean optional" type="checkbox" onclick="$('#product_setting_autoscroll_on').val() == '1' ? $('#product_setting_autoscroll_on').val('0') : $('#product_setting_autoscroll_on').val('1')"
-              span.slider.round
-            .toggle-switch-text Toggle autoscroll on or off
-            = f.input :autoscroll_on, as: :hidden, input_html: { value: "#{ProductSetting.last.autoscroll_on ? '1' : '0'}" }
-          div style="display: flex; align-items: center"
-            = f.input :load_more_text, placeholder: 'Load More..', label: false, input_html: {value:ProductSetting.last.load_more_text, style: 'margin-top: 1rem; width: 220px; border-radius: 5px' }
-            .toggle-switch-text Text to be set as the load more option
-          = f.submit 'Submit', class: 'button', style: 'width: 50%; border-radius: 5px; background-color: #3f4eae; display: block'
-
-
-      .js-admin-section-filter-config-container.columns.medium-10 style="display: none"
-        .header-box
-          span True filter
-          span The following configurations relate to the True filter app
-          = link_to 'Sync Products', sync_products_path, class: 'button', style: 'margin: 0; background-color: #3f4eae; border-radius: 5px'
-
-        hr
-
-        .filter-app-config-container
-          .toggle-switch style="margin-top: 1rem"
-            label.switch
-              - if ProductSetting.last.true_filter_on
-                input class="boolean optional" type="checkbox" checked="checked" onclick="$('#product_setting_true_filter_on').val() == '1' ? $('#product_setting_true_filter_on').val('0') : $('#product_setting_true_filter_on').val('1')"
-              - else
-                input class="boolean optional" type="checkbox" onclick="$('#product_setting_true_filter_on').val() == '1' ? $('#product_setting_true_filter_on').val('0') : $('#product_setting_true_filter_on').val('1')"
-              span.slider.round
-            .toggle-switch-text True Filter Active
-            = f.input :true_filter_on, as: :hidden, input_html: { value: "#{ProductSetting.last.true_filter_on ? '1' : '0'}" }
-          hr
-          .toggle-switch style="margin-top: 1rem"
-            label.switch
-              - if ProductSetting.last.filter_vendor_by_variant
-                input class="boolean optional" type="checkbox" checked="checked" onclick="$('#product_setting_filter_vendor_by_variant').val() == '1' ? $('#product_setting_filter_vendor_by_variant').val('0') : $('#product_setting_filter_vendor_by_variant').val('1')"
-              - else
-                input class="boolean optional" type="checkbox" onclick="$('#product_setting_filter_vendor_by_variant').val() == '1' ? $('#product_setting_filter_vendor_by_variant').val('0') : $('#product_setting_filter_vendor_by_variant').val('1')"
-              span.slider.round
-            .toggle-switch-text Filter Vendor By Variant
-            = f.input :filter_vendor_by_variant, as: :hidden, input_html: { value: "#{ProductSetting.last.filter_vendor_by_variant ? '1' : '0'}" }
-          .toggle-switch style="margin-top: 1rem"
-            label.switch
-              - if ProductSetting.last.filter_product_type_by_variant
-                input class="boolean optional" type="checkbox" checked="checked" onclick="$('#product_setting_filter_product_type_by_variant').val() == '1' ? $('#product_setting_filter_product_type_by_variant').val('0') : $('#product_setting_filter_product_type_by_variant').val('1')"
-              - else
-                input class="boolean optional" type="checkbox" onclick="$('#product_setting_filter_product_type_by_variant').val() == '1' ? $('#product_setting_filter_product_type_by_variant').val('0') : $('#product_setting_filter_product_type_by_variant').val('1')"
-              span.slider.round
-            .toggle-switch-text Filter Product Type By Variant
-            = f.input :filter_product_type_by_variant, as: :hidden, input_html: { value: "#{ProductSetting.last.filter_product_type_by_variant ? '1' : '0'}" }
-          p style='color: #637381;margin-top: 2%;font-size: 12px;font-weight: bold;' * Turning these off will set the search to query the product tag
-          hr
-          .filter-app-config-text Drag and drop the blocks to set the order of the filters
-          ul#sortable
-            - ProductSetting.last.filter_array.each do |filter|
-              li id="#{filter}"
-                = image_tag('drag.svg', size: "20", style: 'margin: 1rem')
-                .li-sub-box
-                  .li-sub-box-text = filter
-          = f.input :filter_order, as: :hidden, input_html: { value: ProductSetting.last.filter_order, class: 'js-filter-order' }
-
-          = f.simple_fields_for :filters do |p|
-            hr
-            p style='font-weight: bold' Brand Filter Order
-            hr
-            - ProductSetting.last.filters.admin_brands.each do |b|
-              .row
-                .columns.medium-3.small-3.large-3
-                  span.row-box-text = b.title
-                .columns.medium-9.small-9.large-9
-                  = p.input :position, label: false, as: :integer, input_html: {value: b.position, name: "product_setting[filters][position][#{b.id}]"}, placeholder: 'Set position for filter bar (lowest ordered first and -1 for filter to not be displayed)', required: false
-            hr
-            p style='font-weight: bold' Size Filter Order
-            hr
-            - ProductSetting.last.filters.admin_sizes.each do |b|
-              .row
-                .columns.medium-3.small-3.large-3
-                  span.row-box-text = b.title
-                .columns.medium-9.small-9.large-9
-                  = p.input :position, label: false, as: :integer, input_html: {value: b.position, name: "product_setting[filters][position][#{b.id}]"}, placeholder: 'Set position for filter bar (lowest ordered first and -1 for filter to not be displayed)', required: false
-            hr
-            p style='font-weight: bold' Product Type Filter Order
-            hr
-            - ProductSetting.last.filters.admin_types.each do |b|
-              .row
-                .columns.medium-3.small-3.large-3
-                  span.row-box-text = b.title
-                .columns.medium-9.small-9.large-9
-                  = p.input :position, label: false, as: :integer, input_html: {value: b.position, name: "product_setting[filters][position][#{b.id}]"}, placeholder: 'Set position for filter bar (lowest ordered first and -1 for filter to not be displayed)', required: false
-            / hr
-            / p style='font-weight: bold' Colour Filter Order
-            / hr
-            / - ProductSetting.last.filters.admin_colours.each do |b|
-            /   .row
-            /     .columns.medium-3.small-3.large-3
-            /       span.row-box-text = b.title
-            /     .columns.medium-9.small-9.large-9
-            /       = p.input :position, label: false, as: :integer, input_html: {value: b.position, name: "product_setting[filters][position][#{b.id}]"}, placeholder: 'Set position for filter bar (lowest ordered first and -1 for filter to not be displayed)', required: false
-
-
-          = f.submit 'Submit', class: 'button', style: 'width: 50%; margin-top: 1rem; border-radius: 5px; background-color: #3f4eae'
-
-      .js-admin-section-search-config-container.columns.medium-10 style="display: none"
+      .js-admin-section-search-config-container.columns.medium-10
         .header-box
           span True search
           span The following configurations relate to the True search app
